@@ -3,21 +3,17 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-import org.gradle.api.internal.classpath.ModuleRegistry
-import org.gradle.api.internal.project.ProjectInternal
-
 plugins {
     id("groovy")
     id("org.jetbrains.kotlin.jvm")
 }
 
+import org.gradle.api.internal.classpath.ModuleRegistry
+import org.gradle.api.internal.project.ProjectInternal
+
+
 group = 'com.newrelic.agent.android'
 version = project.versions.agent
-
-configurations {
-    agp7.extendsFrom(compileOnly)
-    agp8.extendsFrom(agp7)
-}
 
 sourceSets {
     main.java.srcDirs += "src/main/kotlin"
@@ -37,12 +33,12 @@ classes.dependsOn compileKotlin
 dependencies {
     implementation project(path: ':instrumentation', configuration: 'shadow')
     implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
-    implementation 'commons-io:commons-io:' + project.versions.java.commonsIO
 
-    compileOnly 'com.android.tools.build:gradle:' + project.versions.agp.gradleApi
+    compileOnly 'com.android.tools.build:gradle:' + project.versions.agp.plugin
     compileOnly 'com.android.tools.build:gradle-api:' + project.versions.agp.gradleApi
     compileOnly gradleApi()
 
+    implementation 'commons-io:commons-io:' + project.versions.java.commonsIO
     implementation 'com.guardsquare:proguard-gradle:' + project.versions.java.proguard
     implementation 'org.ow2.asm:asm:' + project.versions.java.asm
     implementation 'org.ow2.asm:asm-util:' + project.versions.java.asm
@@ -50,10 +46,12 @@ dependencies {
     compileOnly localGroovy()
     compileOnly 'com.google.guava:guava:' + project.versions.java.guava
 
-    testImplementation 'com.android.tools.build:gradle:' + project.versions.agp.gradleApi
+    testImplementation 'com.android.tools.build:gradle:' + project.versions.agp.plugin
     testImplementation 'com.android.tools.build:gradle-api:' + project.versions.agp.gradleApi
 
+    testImplementation gradleApi()
     testImplementation gradleTestKit()
+
     testImplementation project(path: ':instrumentation', configuration: 'default')
     testImplementation 'junit:junit:' + project.versions.test.junit
     testImplementation 'org.junit.jupiter:junit-jupiter:' + project.versions.test.jupiter
@@ -91,14 +89,18 @@ tasks.withType(Test).configureEach {
             systemProperty it, project.property(it)
         }
     }
+
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+        jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens=java.base/java.util=ALL-UNNAMED"])
+    }
 }
 
 test {
     useJUnitPlatform()
-    maxHeapSize = '2G'
+    maxHeapSize = '4G'
     onlyIf {
-        true
-        // FIXME project.hasProperty('integrationTests') || project.hasProperty('regressionTests')
+        false   // FIXME project.hasProperty('integrationTests') || project.hasProperty('regressionTests')
     }
 }
 
